# omuapps-python

./: .gitmodules  Dockerfile  README.md  omuchat-python.code-workspace  omuchat.code-workspace  packages-run.sh  pyproject.toml  sync-windows.bat
.github/workflows/: pypi.yml  test.yml
omu.py/src/omu/extension/endpoint/: endpoint_extension.py
plugins/: _schema.json  chat.json  emoji.json  nyanya.json  onecomme.json  provider.json
plugins/chat/: run.py
plugins/emoji/: run.py
scripts/: generate_version.py  run.py  version.py
server/src/omuserver/server/: omuserver.py
src/omuchat_python/: __init__.py
