[project]
name = "omuchat-python"
version = "0.1.4"
description = "Add your description here"
authors = [
    { name = "am230", email = "111672334+am230@users.noreply.github.com" }
]
dependencies = [
    "loguru>=0.7.2",
    "psutil>=5.9.7",
    "aiosqlite>=0.19.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.6",
    "pytest>=8.0.0",
]

[tool.rye.workspace]
members = ["packages/*"]

[tool.hatch.metadata]
allow-direct-references = true
