[project]
name = "omuchat_python"
version = "0.2.1"
description = "Add your description here"
authors = [
    { name = "am230", email = "111672334+am230@users.noreply.github.com" },
]
dependencies = ["loguru>=0.7.2"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "ruff>=0.1.6",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.355",
]

[tool.rye.scripts]
version = "python ./scripts/version.py"

[tool.rye.workspace]
members = ["packages/*"]

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = []
